tests/baselines/reference/unusedParameterUsedInTypeOf.errors.txt
tests/cases/compiler/unusedParameterUsedInTypeOf.ts(1,25): error TS6133: 'b' is declared but never used.


==== tests/cases/compiler/unusedParameterUsedInTypeOf.ts (1 errors) ====
    function f1 (a: number, b: typeof a) {
                            ~
!!! error TS6133: 'b' is declared but never used.
        b++;
    }